fix: adjust font size in CSS and enhance scrollbar dimensions for better UI consistency

--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
 @import 'primeicons/primeicons.css';
 
 :root {
-  font: 18px/145% 'SUSE Mono', system-ui, 'Segoe UI', Roboto, sans-serif;
+  font: 16px/145% 'SUSE Mono', system-ui, 'Segoe UI', Roboto, sans-serif;
   letter-spacing: 0.18px;
   text-transform: uppercase;
   color: var(--p-surface-300);
@@ -37,6 +37,7 @@ p {
 
 ::-webkit-scrollbar {
   width: 6px;
+  height: 6px;
   background-color: transparent;
 }
 
@@ -93,6 +94,6 @@ p {
   .p-dialog {
     border-width: 2px !important;
     background-color: var(--p-surface-950) !important;
-    border-color: var(--p-surface-900) !important;
+    border-color: var(--p-surface-800) !important;
   }
 }
